# yolov8seg_tensorrt

./: CMakeLists.txt  README.md  main.cpp  yolov8_seg.hpp
